# snaky-social-hub

./: .env  .env.example  AGENTS.md  API_ANALYSIS_SUMMARY.md  API_DOCUMENTATION.md  API_REQUIREMENTS_ANALYSIS.md  BACKEND_IMPLEMENTATION_COMPLETE.md  BACKEND_IMPLEMENTATION_GUIDE.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER.md  Dockerfile  INTEGRATION_STATUS.md  Makefile  RENDER_DEPLOYMENT.md  UNIFIED_DEPLOYMENT.md  docker-compose.unified.yml  docker-compose.yml  openapi.yaml  render.yaml  tailwind.config.ts
.github/workflows/: ci.yml
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  start.sh
backend/app/: database.py  dependencies.py  models.py  security.py
backend/app/routers/: auth.py  games.py  leaderboard.py
backend/tests/: conftest.py  test_auth.py  test_games.py  test_integration_frontend.py  test_leaderboard.py
backend/tests_integration/: conftest.py  test_auth_integration.py  test_games_integration.py  test_leaderboard_integration.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: index.css
frontend/src/components/: AuthModal.tsx  Leaderboard.tsx  SnakeGame.tsx  WatchGame.tsx
frontend/src/hooks/: useAuth.tsx  useLeaderboard.ts  useSnakeGame.ts
frontend/src/pages/: Index.tsx
frontend/src/services/: api.ts
frontend/src/test/: api.test.ts  engine.test.ts
src/: index.css
src/components/: GameBoard.tsx  Header.tsx  SnakeGame.tsx
src/game/: engine.ts
src/hooks/: useAuth.tsx
src/test/: api.test.ts
